--- a/chemcloud/requirements.txt
+++ b/chemcloud/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.9.2
 django-registration-redux==1.4
+django-tables2==1.1.2
 mysqlclient==1.3.7
 Pillow==2.9.0
 PyMySQL==0.7.2
+six==1.10.0
+South==1.0.2
 Unidecode==0.4.19
 urllib3==1.14
-wheel==0.26.0
