--- a/chemcloud/requirements.txt
+++ b/chemcloud/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.9.2
 django-annoying==0.9.0
 django-crispy-forms==1.6.0
+django-debug-toolbar==1.4
 django-registration-redux==1.4
 django-tables2==1.1.2
 mysqlclient==1.3.7
@@ -8,5 +9,6 @@ Pillow==2.9.0
 PyMySQL==0.7.2
 six==1.10.0
 South==1.0.2
+sqlparse==0.1.19
 Unidecode==0.4.19
 urllib3==1.14
