--- a/chemcloud/requirements.txt
+++ b/chemcloud/requirements.txt
@@ -1,14 +1,68 @@
 Django==1.9.2
-django-annoying==0.9.0
-django-crispy-forms==1.6.0
-django-debug-toolbar==1.4
-django-registration-redux==1.4
-django-tables2==1.1.2
-mysqlclient==1.3.7
+Landscape-Client==14.12
+PAM==0.4.2
 Pillow==2.9.0
 PyMySQL==0.7.2
-six==1.10.0
 South==1.0.2
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+Unidecode==0.04.19
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.45
+argparse==1.2.1
+chardet==2.0.1
+colorama==0.2.5
+command-not-found==0.3
+configobj==4.7.2
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+django-annoying==0.9.0
+django-crispy-forms==1.6.0
+django-datatable==0.2.0
+django-datatables-view==1.13.0
+django-debug-toolbar==1.4
+django-eztables==0.3.2
+django-registration-redux==1.4
+django-tables2==1.1.2
+django.js==0.8.1
+duplicity==0.6.23
+gunicorn==19.4.5
+html5lib==0.999
+httplib2==0.8
+lockfile==0.8
+lxml==3.3.3
+mysqlclient==1.3.7
+oauthlib==0.6.1
+oneconf==0.3.7.14.04.1
+pbr==1.8.1
+pexpect==3.1
+piston-mini-client==0.7.5
+psycopg2==2.4.5
+pyOpenSSL==0.13
+pycrypto==2.6.1
+pycups==1.9.66
+pygobject==3.12.0
+pyinotify==0.9.4
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt==0.9.3.5ubuntu2
+python-debian==0.1.21-nmu2ubuntu2
+pyxdg==0.25
+reportlab==3.0
+requests==2.2.1
+sessioninstaller==0.0.0
+six==1.10.0
+software-center-aptd-plugins==0.0.0
 sqlparse==0.1.19
-Unidecode==0.4.19
+stevedore==1.12.0
+system-service==0.1.6
+unity-lens-photos==1.0
 urllib3==1.14
+virtualenv==13.1.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+wheel==0.24.0
+wsgiref==0.1.2
+xdiagnose==3.6.3build2
+zope.interface==4.0.5
