--- a/chemcloud/requirements.txt
+++ b/chemcloud/requirements.txt
@@ -4,6 +4,7 @@ django-debug-toolbar==1.4
 django-registration-redux==1.4
 django-tables2==1.1.2
 django-widget-tweaks==1.4.1
+MySQL-python==1.2.5
 mysqlclient==1.3.7
 numpy==1.11.0
 Pillow==2.9.0
