--- a/chemcloud/requirements.txt
+++ b/chemcloud/requirements.txt
@@ -1,17 +1,32 @@
+amqp==2.1.1
+Babel==2.3.4
+backports.ssl-match-hostname==3.5.0.1
+billiard==3.5.0.2
+celery==4.0.0
+certifi==2016.9.26
 Django==1.9.2
 django-annoying==0.9.0
+django-celery==3.1.17
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
 django-debug-toolbar==1.4
 django-registration-redux==1.4
 django-tables2==1.1.2
 django-widget-tweaks==1.4.1
+flower==0.9.1
+futures==3.0.5
+kombu==4.0.0
 MySQL-python==1.2.5
 mysqlclient==1.3.7
 numpy==1.11.0
 Pillow==2.9.0
 PyMySQL==0.7.2
+pytz==2016.7
 six==1.10.0
 South==1.0.2
 sqlparse==0.1.19
 swapper==0.3.0
+tornado==4.2
 Unidecode==0.4.19
 urllib3==1.14
+vine==1.1.3
